fix spacing

--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -63,7 +63,7 @@
                 }
             }
             .occupation {
-                padding-top: 1.8rem;
+                padding-top: 2.8rem;
                 h3 {
                     margin: auto;
                     font-size: 2rem;
@@ -71,7 +71,7 @@
                 p {
                     margin: auto;
                     color: gray;
-                    font-size: 2rem;
+                    font-size: 1.8rem;
                 }
             }
         }
